GPS Activity Added. Service added (After app is started)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.HumanFirst.safe.app.SampleOverlayService"
+            android:enabled="true"
+            android:label="OverlayService" />
+
+        <activity
+            android:name="com.HumanFirst.safe.app.SOSActivity"
+            android:label="@string/title_activity_sos" >
+        </activity>
     </application>
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
 </manifest>
